<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_connect"
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:text="@string/btnConnect" />

        <Button
            android:id="@+id/btn_disconnect"
            android:layout_marginLeft="10dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btnDisconnect" />

        <Button
            android:id="@+id/btn_find"
            android:layout_marginLeft="10dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/click" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_left"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:text="@string/left" />

        <Button
            android:id="@+id/btn_down"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/down" />

        <Button
            android:id="@+id/btn_right"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/btn_up"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:text="@string/up" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/linearLayout1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_test"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btndevices" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btnChoose" />

        <Button
            android:id="@+id/btn_pair"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btnPair" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linearLayout3"
        android:layout_toRightOf="@+id/linearLayout3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_View"
            android:layout_width="148dp"
            android:layout_height="180dp"
            android:layout_marginLeft="15dp"
            android:text="@string/testNoTest"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout4"
        android:layout_alignRight="@+id/linearLayout5"
        android:layout_alignTop="@+id/linearLayout4"
        android:layout_toRightOf="@+id/btn_up"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_sendCoor"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSendCoorNot" />

        <TextView
            android:id="@+id/textX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/xCoor"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yCoor"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zCoor"
            android:textSize="18dp" />

    </LinearLayout>

</RelativeLayout>
